$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Apply PATCH [ 1836703 ] a few corrections to Italian.txt
 - Apply PATCH [ 1834400 ] some corrections to Italian.txt
 - Apply PATCH [ 1834285 ] All remaning items for Italian.txt
 - Partial fix bug [ 1832024 ] Notice: Undefined variable: LANGUAGE in /var/www/webcalendar/includes/translate.php
   (Forgot to set $LANGUAGE global in function translate.
    And, some things seem to be getting translated more than once.)
 - Add support for Czech UTF8
 - Fix bug [ 1830952 ] Cannot add events - Error, during execute Query
 - Fix bug [ 1737128 ] From notification to "not authorized"
 - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
 - Fix bug [ 1829125 ] I can not add external calendars
 - Fix bug [ 1792313 ] Installation wizard step 1 shows wrong colors
 - Fix bug [ 1830446 ] Installation wizard will not be displayed in proper language
 - Fix bug [ 1829224 ] getPostVal fails on non-array
 - Fix bug [ 1827370 ] would not add multiple participants to event
 - Added ability to place page in more than one UAC 'page_lookup' group. We should be able to eliminate
   'page_lookup_ex' array eventually.
 - Fix bug [ 1828397 ] "you are not authorized" error
 - Fix bug [ 1828416 ] no pull-down entries for languages at 'preferences' and 'sys
 - Fix bug [ 1828232 ] Error after Login
 - Add capability to translate dates and numbers.
   In preparation for eliminating file 'includes/date_formats.php'.
 - Applied PATCH [1826466 ] update to translations/Italian.txt
 - Fixed bug [ 1826464 ] wrong default browser language
 - Applied PATCH [ 1813253 ] patch for upgrade-postgres.sql
 - Fixed bug [ 1818796 ] DbCachedir readable by any WebCal installation
 - Fixed bug [ 1819188 ] v1.1.6 SelectWeek problem
 - Added <blink></blink> login back into translate.php to aid in development
 - Cleaned up new Participant Selection