@@ -4,6 +4,7 @@ NOTE: This is the 1.3.X development branch.  Put code changes right
 below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - Fix bug [ 1840084 ] 'External participants' is not at the left margin like
  - Apply PATCH [ 1836703 ] a few corrections to Italian.txt
  - Apply PATCH [ 1834400 ] some corrections to Italian.txt
  - Apply PATCH [ 1834285 ] All remaning items for Italian.txt
